<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_intent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.isunican.proyectobase.Views.DetailActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="85dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/imgGasolinera"
            android:layout_width="78dp"
            android:layout_height="67dp"
            android:layout_marginTop="10dp"
            android:clickable="false"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/txtNomGasolinera"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1.4"
            android:gravity="center"
            android:text="TextView"
            android:textSize="30dp"
            android:textStyle="bold|italic" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="106dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtTipoGasolina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:text="TipoGasolina"
            android:textSize="25dp" />

        <TextView
            android:id="@+id/txtPrecioGasolina"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="PrecioGasolina"
            android:textSize="25dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtDireccion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_weight="0.1"
            android:text="Direccion: "
            android:textSize="15dp" />

        <com.google.android.gms.maps.MapView
            android:id="@+id/mapGasolinera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="15" />

    </LinearLayout>

</LinearLayout>
