...
                android:layout_height="30dp"
                android:layout_gravity="center"
                android:layout_weight="1"
                app:srcCompat="@drawable/filter_icon" />

            <Button
                android:id="@+id/buttonFiltros"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="Filtros" />

            <Button
...
        <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
            android:id="@+id/swiperefresh"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ListView
                android:id="@+id/listViewGasolineras"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>


        </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

...
